# Autonomous-Code-Review-Testing-Agent.

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  look-at-the-current-scalable-curry.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
agent/: graph.py  metering.py  state.py
agent/nodes/: clone_repo.py  diagnose_failures.py  evaluate_results.py  execute_tests.py  generate_tests.py  open_pr.py  parse_codebase.py  patch_tests.py  save_results.py  select_targets.py
api/: dependencies.py  main.py
api/middleware/: auth.py  rate_limit.py
api/routers/: health.py  repositories.py  runs.py  webhooks.py
api/schemas/: repositories.py  runs.py  webhooks.py
core/: config.py  constants.py  exceptions.py
db/: client.py
db/crud/: corrections.py  repositories.py  runs.py  test_files.py
db/migrations/: 001_initial_schema.sql
db/models/: correction.py  repository.py  run.py  test_file.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
github_integration/: client.py  cloner.py  pr_creator.py  webhook_verify.py
llm/: client.py  parsers.py
llm/prompts/: diagnose_failures.py  generate_tests.py  patch_tests.py
parsing/: analyzer.py  languages.py
sandbox/: executor.py  result_parser.py
sandbox/backends/: __init__.py  fargate.py  local.py
sandbox/dockerfiles/: Dockerfile.node  Dockerfile.python
tests/: conftest.py
tests/e2e/: test_self_correction.py
tests/integration/: test_api_endpoints.py  test_execute_tests.py  test_generate_tests.py
tests/unit/: test_llm.py  (+4 more)
(+13 files in other folders)
